# repobee-tauri

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  settings-schema.json  test_settings.sh
repobee-cli/: Cargo.toml
repobee-cli/src/: main.rs
repobee-cli/tests/: integration_tests.rs
repobee-core/: Cargo.toml
repobee-core/examples/: generate_schema.rs  show_json_structure.rs
repobee-core/src/: lib.rs  setup.rs
repobee-core/src/canvas/: client.rs  lms_client_factory.rs  mod.rs  types.rs  yaml.rs
repobee-core/src/lms/: lms_client_factory.rs  types.rs  yaml.rs
repobee-core/src/platform/: gitea.rs  github.rs  gitlab.rs  local.rs  mod.rs
repobee-core/src/settings/: common.rs  enums.rs  gui.rs  manager.rs  mod.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: SettingsMenu.css  SettingsMenu.tsx
