[package]
name = "repobee-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Git operations
git2.workspace = true

# HTTP client for platform APIs
reqwest.workspace = true

# Date/time for timestamps
chrono.workspace = true

# Platform-specific directories
dirs = "5"

# JSON Schema generation and validation
schemars = "0.8"
jsonschema = "0.18"

[dev-dependencies]
tempfile.workspace = true
